PCS BAckup 26Dec2023/Backup-Source/objects/Account.object
<CustomObject>
    <fields>
        <fullName>API_SFDC_ID__c</fullName>
        <description>Old SFDC ID from API ORG</description>
        <externalId>true</externalId>
        <label>API_SFDC_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 0</fullName>
                </value>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
                <value>
                    <fullName>Category 4</fullName>
                </value>
                <value>
                    <fullName>Category 5</fullName>
                </value>
                <value>
                    <fullName>Category 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>This Field only used for Data Mapping from Production</description>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Overview__c</fullName>
        <label>Account Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Strategy__c</fullName>
        <label>Account Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Addtl_Information__c</fullName>
        <inlineHelpText>Contract person&apos;s name goes here</inlineHelpText>
        <label>Addt&apos;l Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_OTC_Overall__c</fullName>
        <label>Annual Spend OTC Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_Rx_DRL__c</fullName>
        <label>Annual Spend Rx DRL</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_Rx_Overall__c</fullName>
        <label>Annual Spend Rx Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_SRx_DRL__c</fullName>
        <label>Annual Spend SRx DRL</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Spend_SRx_Overall__c</fullName>
        <label>Annual Spend SRx Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_spend_OTC_DRL__c</fullName>
        <label>Annual spend OTC DRL</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apexus_Member__c</fullName>
        <label>Apexus Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bed_Size__c</fullName>
        <label>Bed Size</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Terms__c</fullName>
        <label>Cash Terms %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Of_Trade__c</fullName>
        <description>OTC Customer Class of Trade / Account Types</description>
        <inlineHelpText>OTC Customer Class of Trade</inlineHelpText>
        <label>Class Of Trade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artwork Support</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Distributor-Direct</fullName>
                </value>
                <value>
                    <fullName>Fed Supply Schd OGA</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>Mail Order Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Managed Care</fullName>
                </value>
                <value>
                    <fullName>Promotions Support</fullName>
                </value>
                <value>
                    <fullName>Rebuyer</fullName>
                </value>
                <value>
                    <fullName>Repackager</fullName>
                </value>
                <value>
                    <fullName>RetailChain Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Specialty Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cooling_Period__c</fullName>
        <label>Cooling Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Time_Benchmark__c</fullName>
        <label>Customer Response Time Benchmark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_s_Buying_Strategy__c</fullName>
        <label>Customer&apos;s Buying Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DEA_3__c</fullName>
        <label>Other #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA__c</fullName>
        <label>DEA#</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_DHS__c</fullName>
        <label>Account Description</label>
        <length>13000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect__c</fullName>
        <label>Direct Indirect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPO1__c</fullName>
        <label>GPO 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahold Indirect Contract</fullName>
                </value>
                <value>
                    <fullName>Intalere</fullName>
                </value>
                <value>
                    <fullName>Asembia</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>Innovatix</fullName>
                </value>
                <value>
                    <fullName>MedAssets</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>MMCAP</fullName>
                </value>
                <value>
                    <fullName>Vizient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>PACT</fullName>
                </value>
                <value>
                    <fullName>ROi</fullName>
                </value>
                <value>
                    <fullName>The Resource Group</fullName>
                </value>
                <value>
                    <fullName>CHPC</fullName>
                </value>
                <value>
                    <fullName>Gerimed</fullName>
                </value>
                <value>
                    <fullName>Health Trust</fullName>
                </value>
                <value>
                    <fullName>Intersectta</fullName>
                </value>
                <value>
                    <fullName>ION</fullName>
                </value>
                <value>
                    <fullName>TRG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPO2__c</fullName>
        <label>GPO 2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Goals__c</fullName>
        <label>Growth Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPA__c</fullName>
        <label>IPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Directions__c</fullName>
        <label>Internal Directions</label>
        <length>13000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Process_Time_Benchmark__c</fullName>
        <label>Internal Process Time Benchmark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Definitive_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick to make the customer visible for Definitive Record Creation</description>
        <label>Is Definitive Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mck_RAD_Rebate__c</fullName>
        <label>Mck &amp; RAD Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_IDN__c</fullName>
        <label>National IDN</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Facilities__c</fullName>
        <label>No. of Facilities</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_ABS__c</fullName>
        <label>ABS%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Account_Cooling_Period__c</fullName>
        <label>Account Cooling Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Account_Hierarchy_Type__c</fullName>
        <formula>IF( ISBLANK(ParentId),&apos;Parent&apos;,&apos;Child&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto generated Indicator for Account is Parent or Child</inlineHelpText>
        <label>Account Hierarchy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_AdditionalRebateCardinalMajor__c</fullName>
        <label>Additional Rebate % (Cardinal/Major)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Admin_Fee_Sec_Template__c</fullName>
        <label>Admin Fee% (Secondary Template)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_BID_Team_Account_Type__c</fullName>
        <inlineHelpText>specify if the Account is Buying Group or Customer</inlineHelpText>
        <label>Buying Group / Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Upload_Number__c</fullName>
        <label>Batch Upload Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fees__c</fullName>
        <label>CM Fees %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Discount__c</fullName>
        <label>Cash Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comparable_Customers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Price segmentation</inlineHelpText>
        <label>Comparable Customers</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Comparable Customers)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_External_Description__c</fullName>
        <inlineHelpText>Contract  External Description is populated from NPR when a Customer is created</inlineHelpText>
        <label>Contract External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Number__c</fullName>
        <inlineHelpText>Contract Number is populated from NPR when a Customer is created</inlineHelpText>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracts Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phoenix_Contracts_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Distribution__c</fullName>
        <label>Controlled Distribution %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance__c</fullName>
        <label>Controlled Substance %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Position__c</fullName>
        <label>Current Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Custom_type__c</fullName>
        <label>Custom type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom type 1</fullName>
                </value>
                <value>
                    <fullName>Custom type 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bucket__c</fullName>
        <inlineHelpText>For Price segmentation</inlineHelpText>
        <label>Customer Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPO - Bucket 4</fullName>
                </value>
                <value>
                    <fullName>Bucket 1</fullName>
                </value>
                <value>
                    <fullName>Bucket 3</fullName>
                </value>
                <value>
                    <fullName>Bucket 2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Class_Bid_Template__c</fullName>
        <label>Bid Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Pharmagen</fullName>
                </value>
                <value>
                    <fullName>ABC Progen</fullName>
                </value>
                <value>
                    <fullName>BASE/DSH</fullName>
                </value>
                <value>
                    <fullName>ClarusOne</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Direct or Indirect</fullName>
                </value>
                <value>
                    <fullName>Econdisc</fullName>
                </value>
                <value>
                    <fullName>Government Pricing</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Net Indirect Pricing</fullName>
                </value>
                <value>
                    <fullName>ROS</fullName>
                </value>
                <value>
                    <fullName>RXSS</fullName>
                </value>
                <value>
                    <fullName>Sams Club</fullName>
                </value>
                <value>
                    <fullName>Walgreens</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Cooling_Period_Days__c</fullName>
        <label>Customer Cooling Period(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Est_Market_Share__c</fullName>
        <label>Customer Est Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group_Type__c</fullName>
        <label>Customer Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Group</fullName>
                </value>
                <value>
                    <fullName>Clinics</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Distributor-Direct</fullName>
                </value>
                <value>
                    <fullName>Fed Supply Schd OGA</fullName>
                </value>
                <value>
                    <fullName>Federal Supply Schd</fullName>
                </value>
                <value>
                    <fullName>GPO - Hospitals</fullName>
                </value>
                <value>
                    <fullName>GPO - Non Hospital</fullName>
                </value>
                <value>
                    <fullName>Home HealthCare</fullName>
                </value>
                <value>
                    <fullName>Home Infusion</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Long Term Care</fullName>
                </value>
                <value>
                    <fullName>Mail Order Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>PharmacyBenefits Mgr</fullName>
                </value>
                <value>
                    <fullName>Repackager</fullName>
                </value>
                <value>
                    <fullName>Retail Pharmacy</fullName>
                </value>
                <value>
                    <fullName>RetailChain Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Speciality Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Staff Model HMO</fullName>
                </value>
                <value>
                    <fullName>Vet Distributor</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Max_Est_Share_of_Wallet__c</fullName>
        <label>Customer Max Est Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Service_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phoenix_Customer_Service_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Current_Sales__c</fullName>
        <label>DRL Current Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Opportunity_Sales__c</fullName>
        <label>DRL Opportunity Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Share_of_Wallet_Vol__c</fullName>
        <label>DRL Share of Wallet (Vol)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Share_of_Wallet__c</fullName>
        <label>DRL Share of Wallet ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Total_Est_Account_Sales__c</fullName>
        <label>DRL Total Est Account Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Damages__c</fullName>
        <label>Damages %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Account_Mkt_Share__c</fullName>
        <label>Est Account Mkt Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Est_Account_Share_of_Wallet__c</fullName>
        <label>Est Account Share of Wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee__c</fullName>
        <label>Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GLN__c</fullName>
        <label>GLN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_HIN__c</fullName>
        <label>HIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_IPA_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPA Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Accounts (IPA Contract)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Index_Number__c</fullName>
        <label>Index Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Cash_Discount__c</fullName>
        <label>Indirect Cash Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Bid_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to make the customer visible for Bid Creation</inlineHelpText>
        <label>Is Bid Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Direct_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Direct Customer- For Price Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_GPO_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GPO Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Govt_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Lowest Price/SKU and CM fee</inlineHelpText>
        <label>Is Govt Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_IPA_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>specify if the Account is IPA Parent Account</inlineHelpText>
        <label>Is IPA Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_IPA_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is IPA Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_OTC_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify OTC Customers</description>
        <label>Is OTC Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Source_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Source Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Local_VIP__c</fullName>
        <label>Local VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_NLC__c</fullName>
        <label>Phoenix NLC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Name2__c</fullName>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Order_Analytics_Fee__c</fullName>
        <label>Order Analytics Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_IPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Parent IPA of the IPA Member Account</inlineHelpText>
        <label>Parent IPA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Phoenix_Is_IPA_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Preferred_Wholesaler__c</fullName>
        <label>Preferred Wholesaler for CM Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Morris and Dickson</fullName>
                </value>
                <value>
                    <fullName>Source program</fullName>
                </value>
                <value>
                    <fullName>Oncology Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_RCA_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Parent RCA Agreement</inlineHelpText>
        <label>RCA Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Phoenix_Contract__c.Phoenix_Is_RCA_Contract__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_RCA_Type__c</fullName>
        <label>RCA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RCA-A</fullName>
                </value>
                <value>
                    <fullName>RCA-H</fullName>
                </value>
                <value>
                    <fullName>RCA-MA</fullName>
                </value>
                <value>
                    <fullName>RCA-N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_RDC_NLC__c</fullName>
        <label>RDC/NLC %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_REMS_Program_Fee__c</fullName>
        <label>REMS Program Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_Pharmagen__c</fullName>
        <label>Rebate(Pharmagen)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_Secondary_Template__c</fullName>
        <label>Rebate % (Secondary Template)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebates__c</fullName>
        <label>Rebates %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Required_Cold_Storage__c</fullName>
        <label>Required Cold Storage %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Retail_Indirect_Wholesaler_Fee__c</fullName>
        <label>Retail Indirect Wholesaler Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAPCode__c</fullName>
        <externalId>true</externalId>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Customer_Opportunity__c</fullName>
        <label>Total Customer Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_VIP_Type__c</fullName>
        <label>VIP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_VIP__c</fullName>
        <label>Customer VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_WMT_Direct_Rebate__c</fullName>
        <label>WMT Direct Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>